--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^1.7.9",
+    "basic-loading": "^2.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.15.0",
     "sass": "^1.83.4",
     "swiper": "^11.2.1",
     "typescript": "^4.4.2",
